--- a/views/url_index.ejs
+++ b/views/url_index.ejs
@@ -22,42 +22,70 @@
   </head>
   <body>
     <header><%- include('partials/_header'); %></header>
-<main class="container py-5">
-  <h3>My URLs</h3>
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">Short URL ID</th>
-        <th scope="col">Long URL</th>
-        <th scope="col">Edit</th>
-        <th scope="col">Delete</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% for (let id in urls) { %>
-        <tr>
-          <td><a href='/url/<%= urls[id].shortUrl %>'><%= urls[id].shortUrl %></a></td>
-          <td><%= urls[id].longUrl %></td>
+    <main class="container py-5">
+      <h3>My URLs</h3>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Short URL ID</th>
+            <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% for (let id in urls) { %>
+          <tr>
+            <td>
+              <a href="/url/<%= urls[id].shortUrl %>"
+                ><%= urls[id].shortUrl %></a
+              >
+            </td>
+            <td><%= urls[id].longUrl %></td>
 
-          <td>
-            <form action="/url/<%= urls[id].shortUrl %>/edit" method="get">
-              <input type="hidden" name="id" value="<%= id %>">
-              <button class="btn text-primary border border-primary">Edit</button>
-            </form></td>
+            <td>
+              <form action="/url/<%= urls[id].shortUrl %>/edit" method="get">
+                <input type="hidden" name="id" value="<%= id %>" />
+                <button class="btn text-primary border border-primary">
+                  Edit
+                </button>
+              </form>
+            </td>
 
-
-          <td>
-            <form action="/url/<%= urls[id].shortUrl %>/delete" method="post">
-              <input type="hidden" name="id" value="<%= urls[id].shortUrl %>">
-              <button class="btn text-danger border border-danger">Delete</button>
-            </form></td>
-        </tr>
-      <% } %>
-    </tbody>
-  </table>
-</main>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js" integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js" integrity="sha512-6UofPqm0QupIL0kzS/UIzekR73/luZdC6i/kXDbWnLOJoqwklBK6519iUnShaYceJ0y4FaiPtX/hRnV/X/xlUQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-</body>
+            <td>
+              <form action="/url/<%= urls[id].shortUrl %>/delete" method="post">
+                <input
+                  type="hidden"
+                  name="id"
+                  value="<%= urls[id].shortUrl %>"
+                />
+                <button class="btn text-danger border border-danger">
+                  Delete
+                </button>
+              </form>
+            </td>
+          </tr>
+          <% } %>
+        </tbody>
+      </table>
+    </main>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+      integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"
+      integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"
+      integrity="sha512-6UofPqm0QupIL0kzS/UIzekR73/luZdC6i/kXDbWnLOJoqwklBK6519iUnShaYceJ0y4FaiPtX/hRnV/X/xlUQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+  </body>
 </html>
