--- a/views/user_register.ejs
+++ b/views/user_register.ejs
@@ -22,44 +22,60 @@
   </head>
   <body>
     <header><%- include('partials/_header'); %></header>
-<main class="container py-5">
-  <div>
-    <div class="p-4 bg-dark w-25 mx-auto text-light text-center">
-      <h3>Register</h3>
+    <main class="container py-5">
+      <div>
+        <div class="p-4 bg-dark w-25 mx-auto text-light text-center">
+          <h3>Register</h3>
 
-      <% if(message) { %>
-        <div class="mx-auto w-100 p-2 bg-danger text-white"><%- message %></div>
-      <%} %>
+          <% if(message) { %>
+          <div class="mx-auto w-100 p-2 bg-danger text-white">
+            <%- message %>
+          </div>
+          <%} %>
 
-      <form action="/register" method="post">
-        <div class="form-group">
-          <input
-            type="email"
-            name="email"
-            placeholder="email"
-            class="form-control my-2"
-          />
+          <form action="/register" method="post">
+            <div class="form-group">
+              <input
+                type="email"
+                name="email"
+                placeholder="email"
+                class="form-control my-2"
+              />
+            </div>
+
+            <div class="form-group">
+              <input
+                type="password"
+                name="password"
+                placeholder="password"
+                class="form-control my-2"
+              />
+            </div>
+
+            <button class="form-control btn btn-primary my-2">Register</button>
+          </form>
+          Don't have an account? <a href="/login">Login Here.</a>
         </div>
+      </div>
+    </main>
 
-        <div class="form-group">
-          <input
-            type="password"
-            name="password"
-            placeholder="password"
-            class="form-control my-2"
-          />
-        </div>
-
-        <button class="form-control btn btn-primary my-2">Register</button>
-      </form>
-      Don't have an account? <a href="/login">Login Here.</a>
-    </div>
-
-  </div>
-</main>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js" integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js" integrity="sha512-6UofPqm0QupIL0kzS/UIzekR73/luZdC6i/kXDbWnLOJoqwklBK6519iUnShaYceJ0y4FaiPtX/hRnV/X/xlUQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-</body>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
+      integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"
+      integrity="sha512-1/RvZTcCDEUjY/CypiMz+iqqtaoQfAITmNSJY17Myp4Ms5mdxPS5UV7iOfdZoxcGhzFbOm6sntTKJppjvuhg4g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"
+      integrity="sha512-6UofPqm0QupIL0kzS/UIzekR73/luZdC6i/kXDbWnLOJoqwklBK6519iUnShaYceJ0y4FaiPtX/hRnV/X/xlUQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+  </body>
 </html>
