updated pages to reflect correct HTML error pages, instead of sending to /login for unauthorized users

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -7,7 +7,7 @@
 
   <ul class="nav">
     <li class="nav-item nav-link">
-      <a href="/url/new" class="btn btn-warning mx-2">Create New URL</a>
+      <a href="/urls/new" class="btn btn-warning mx-2">Create New URL</a>
     </li>
     <li class="nav-item nav-link">
       <a href="/urls" class="btn btn-warning mx-2">Show URLs</a>
