--- a/views/url_edit.ejs
+++ b/views/url_edit.ejs
@@ -31,7 +31,7 @@
 
       <h5 class="card-title">EDIT</h5>
 
-      <form action="/url/<%- id %>/edit" method="post">
+      <form action="/urls/<%- id %>/edit" method="post">
         <input
           type="text"
           value="<%- longUrl %>"
