--- a/views/url_new.ejs
+++ b/views/url_new.ejs
@@ -24,7 +24,7 @@
     <header><%- include('partials/_header'); %></header>
     <main class="container py-5">
       <h3>Create TinyURL</h3>
-      <form action="/url/new" method="post">
+      <form action="/urls/new" method="post">
         Enter a URL:
         <input
           type="text"
